[gd_scene load_steps=17 format=2]

[ext_resource path="res://game/player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://game/ground/path.glb" type="PackedScene" id=2]
[ext_resource path="res://game/meaning/Meaning.gd" type="Script" id=3]
[ext_resource path="res://game/someone.tscn" type="PackedScene" id=4]
[ext_resource path="res://game/Camera.tscn" type="PackedScene" id=5]
[ext_resource path="res://game/Sun.tscn" type="PackedScene" id=6]
[ext_resource path="res://game/ground/wall.tscn" type="PackedScene" id=7]
[ext_resource path="res://game/ground/Floor.tscn" type="PackedScene" id=8]
[ext_resource path="res://game/meaning/book_pedastal.tscn" type="PackedScene" id=9]
[ext_resource path="res://game/dialog/all-the-pages-are-blank.ogg" type="AudioStream" id=10]
[ext_resource path="res://game/dialog/meaning-is-tricky.ogg" type="AudioStream" id=11]
[ext_resource path="res://game/dialog/meaning-3.ogg" type="AudioStream" id=12]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 6.46121, 7.16887, 4.45438 )

[sub_resource type="Animation" id=2]
resource_name = "meaning1"
length = 14.5
tracks/0/type = "audio"
tracks/0/path = NodePath("dialog")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 11 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=3]
resource_name = "meaning2"
length = 9.5
tracks/0/type = "audio"
tracks/0/path = NodePath("dialog")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 10 )
} ],
"times": PoolRealArray( 0 )
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 7.9 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "take_book"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "meaning3"
length = 16.5
tracks/0/type = "audio"
tracks/0/path = NodePath("dialog")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 12 )
} ],
"times": PoolRealArray( 0 )
}

[node name="Meaning" type="Spatial"]
script = ExtResource( 3 )

[node name="Floor" parent="." instance=ExtResource( 8 )]

[node name="Player" parent="." instance=ExtResource( 1 )]
transform = Transform( -0.0554206, 0, 0.998463, 0, 1, 0, -0.998463, 0, -0.0554206, -35.2466, 0, 1.29525 )

[node name="Camera" parent="." instance=ExtResource( 5 )]

[node name="Sun" parent="." instance=ExtResource( 6 )]
transform = Transform( 0.880756, -0.366651, 0.299727, -0.0557725, 0.548196, 0.834488, -0.470275, -0.751697, 0.462378, 0, -0.0579491, 0 )

[node name="someone" parent="." instance=ExtResource( 4 )]
transform = Transform( 0.406066, 0, -0.913843, 0, 1, 0, 0.913843, 0, 0.406066, 6.58544, 0, -3.51693 )

[node name="dialog" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 0.881625, 0, -0.471951, 0, 1, 0, 0.471951, 0, 0.881625, 5.45849, 4.00832, -6.53276 )
stream = ExtResource( 10 )
unit_size = 50.0
bus = "Sfx"

[node name="triggerArea" type="Area" parent="."]
transform = Transform( 0.87484, 0, -0.484413, 0, 1, 0, 0.484413, 0, 0.87484, 1.414, 0, -6.00558 )
collision_mask = 8388608

[node name="CollisionShape" type="CollisionShape" parent="triggerArea"]
transform = Transform( 1, 0, -2.98023e-08, 0, 1, 0, 2.98023e-08, 0, 1, 0, 0, 0 )
shape = SubResource( 1 )

[node name="wall" parent="." instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -40.979, 0, 0.526759 )
target_scene = "res://game/limbo/Limbo.tscn"
title = "Limbo"

[node name="path" parent="." instance=ExtResource( 2 )]
transform = Transform( 0.143458, 0, 0.989656, 0, 1, 0, -0.989656, 0, 0.143458, -23.3335, 0, -0.363473 )

[node name="path10" parent="." instance=ExtResource( 2 )]
transform = Transform( 0.143458, 0, 0.989656, 0, 1, 0, -0.989656, 0, 0.143458, -34.5368, 0, 1.19904 )

[node name="path2" parent="." instance=ExtResource( 2 )]
transform = Transform( -0.0646195, 0, 0.99791, 0, 1, 0, -0.99791, 0, -0.0646195, -18.897, 0, 0.279636 )

[node name="path3" parent="." instance=ExtResource( 2 )]
transform = Transform( -0.0646195, 0, 0.99791, 0, 1, 0, -0.99791, 0, -0.0646195, -13.1601, 0, -0.0918547 )

[node name="path4" parent="." instance=ExtResource( 2 )]
transform = Transform( -0.163825, 0, 0.986489, 0, 1, 0, -0.986489, 0, -0.163825, -8.28117, 0, 1.62669 )

[node name="path7" parent="." instance=ExtResource( 2 )]
transform = Transform( 0.974413, 0, -0.224764, 0, 1, 0, 0.224764, 0, 0.974413, -4.27202, 0, -2.11153 )

[node name="path9" parent="." instance=ExtResource( 2 )]
transform = Transform( 0.780179, 0, 0.625556, 0, 1, 0, -0.625556, 0, 0.780179, 0.600676, 0, -4.1005 )

[node name="book_pedastal" parent="." instance=ExtResource( 9 )]
transform = Transform( 0.605127, 0, 0.796129, 0, 1, 0, -0.796129, 0, 0.605127, -5.08768, 0, -8.51972 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/meaning1 = SubResource( 2 )
anims/meaning2 = SubResource( 3 )
anims/meaning3 = SubResource( 4 )

[connection signal="body_entered" from="triggerArea" to="." method="_on_triggerArea_body_entered"]
[connection signal="body_exited" from="triggerArea" to="." method="_on_triggerArea_body_exited"]
[connection signal="clicked" from="book_pedastal" to="." method="_on_book_pedastal_clicked"]

[editable path="book_pedastal"]
